<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".PaymentActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtDisplay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawablePadding="10sp"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/PaymentDetails"
                android:textAlignment="center"
                android:textColor="#349BCA"
                android:textSize="24sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/txtPackageName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txtPackagePrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <TextView
                android:id="@+id/txtPackageDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioButtonVisa"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        android:text="@string/visa" />

                    <RadioButton
                        android:id="@+id/radioButtonMastercard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        android:text="@string/MasterCard" />

                    <RadioButton
                        android:id="@+id/radioButtonUPI"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        android:text="@string/UPI" />
                </RadioGroup>
            </androidx.cardview.widget.CardView>

            <Space
                android:layout_width="match_parent"
                android:layout_height="30sp" />

            <FrameLayout
                android:id="@+id/framePayment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </FrameLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="30sp" />

        </LinearLayout>

        <Button
            android:id="@+id/btnPaynow"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:text="@string/PayNow"
            android:visibility="invisible" />
    </LinearLayout>
</ScrollView>